--- a/SparkNotebooks/UpToDate/Scala Gradient Ascent C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Scala Gradient Ascent C4E.snb.ipynb
@@ -18,7 +18,7 @@
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.4"
+      "clustering4ever % clustering4ever_2.11 % 0.6.7"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -73,7 +73,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 0.934s, at 2018-09-07 14:09"
+          "time" : "Took: 2.743s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -100,7 +100,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-07 14:09:41--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.10’\n\n     0K .......                                               100%  724M=0s\n\n2018-09-07 14:09:41 (724 MB/s) - ‘/tmp/aggregation.csv.10’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 14:09:41--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 14:09:41--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.12’\n\n     0K .                                                     100%  220M=0s\n\n2018-09-07 14:09:41 (220 MB/s) - ‘/tmp/labels.12’ saved [1576/1576]\n\nFINISHED --2018-09-07 14:09:41--\nTotal wall clock time: 0.08s\nDownloaded: 2 files, 9.4K in 0s (527 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
+          "text" : "--2018-09-09 23:24:01--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.16’\n\n     0K .......                                               100%  931K=0.008s\n\n2018-09-09 23:24:01 (931 KB/s) - ‘/tmp/aggregation.csv.16’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-09 23:24:01--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-09 23:24:01--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.18’\n\n     0K .                                                     100%  218M=0s\n\n2018-09-09 23:24:01 (218 MB/s) - ‘/tmp/labels.18’ saved [1576/1576]\n\nFINISHED --2018-09-09 23:24:01--\nTotal wall clock time: 0.2s\nDownloaded: 2 files, 9.4K in 0.008s (1.09 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
         }
       ]
     },
@@ -129,7 +129,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "path: String = /tmp/aggregation.csv\ndata: scala.collection.parallel.mutable.ParArray[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@76be1101,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@28549642,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@60a49c5d,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@6ae24700,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@6cd27544,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@60b..."
+          "text" : "path: String = /tmp/aggregation.csv\ndata: scala.collection.parallel.mutable.ParArray[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@77e3a06b,None,None), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@2f305866,None,None), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@18316cd5,None,None), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@473d9f41,None,None), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@2d378f35,None,None), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@e9019d,None,None), RealClusterizable(6,clus..."
         },
         {
           "metadata" : { },
@@ -138,7 +138,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 3,
-          "time" : "Took: 1.515s, at 2018-09-07 14:09"
+          "time" : "Took: 2.553s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -163,11 +163,6 @@
         "val k2 = 1\n",
         "val epsilon = 0.00001\n",
         "val maxNumberIter = 50\n",
-        "val bucketLayers = 1\n",
-        "val w = 1D\n",
-        "val bucketNumber = 8\n",
-        "val propConvStopIter = 1D\n",
-        "val persistanceLVL: StorageLevel = StorageLevel.MEMORY_ONLY\n",
         "val kernel1 = KernelNature.EuclideanKNN\n",
         "val kernelArgs = immutable.Vector(\"30\")"
       ],
@@ -175,7 +170,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "metric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nk: Int = 40\nk2: Int = 1\nepsilon: Double = 1.0E-5\nmaxNumberIter: Int = 50\nbucketLayers: Int = 1\nw: Double = 1.0\nbucketNumber: Int = 8\npropConvStopIter: Double = 1.0\npersistanceLVL: org.apache.spark.storage.StorageLevel = StorageLevel(memory, deserialized, 1 replicas)\nkernel1: clustering4ever.scala.kernels.KernelNature.Value = EuclideanKNN\nkernelArgs: scala.collection.immutable.Vector[String] = Vector(30)\n"
+          "text" : "metric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nk: Int = 40\nk2: Int = 1\nepsilon: Double = 1.0E-5\nmaxNumberIter: Int = 50\nkernel1: clustering4ever.scala.kernels.KernelNature.Value = EuclideanKNN\nkernelArgs: scala.collection.immutable.Vector[String] = Vector(30)\n"
         },
         {
           "metadata" : { },
@@ -184,7 +179,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 4,
-          "time" : "Took: 0.988s, at 2018-09-07 14:09"
+          "time" : "Took: 0.704s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -221,16 +216,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1536322185690\nconvergedDS: scala.collection.GenSeq[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@76be1101,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@28549642,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@60a49c5d,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@6ae24700,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@6cd27544,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@60b8081a,List(),2147483647..."
+          "text" : "t1: Long = 1536528247251\nconvergedDS: scala.collection.GenSeq[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@77e3a06b,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@2f305866,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@18316cd5,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@473d9f41,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClust..."
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.42"
+            "text/html" : "0.535"
           },
           "output_type" : "execute_result",
           "execution_count" : 5,
-          "time" : "Took: 1.560s, at 2018-09-07 14:09"
+          "time" : "Took: 1.375s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -252,22 +247,22 @@
       "source" : [
         "plot(convergedDS.map(_.vector.toArray).toArray)\n",
         "\n",
-        "plot(convergedDS.map(_.v2.toArray).toArray)"
+        "plot(convergedDS.map(_.v2.get.toArray).toArray)"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "res8: smile.plot.Window = Window(javax.swing.JFrame[frame0,2380,400,1000x1000,invalid,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,5,25,990x970,invalid,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,0x0,invalid,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=9,maximumSize=,minimumSize=,preferredSize=])\n"
+          "text" : "res8: smile.plot.Window = Window(javax.swing.JFrame[frame0,460,37,1000x1000,invalid,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,5,25,990x970,invalid,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,0x0,invalid,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=9,maximumSize=,minimumSize=,preferredSize=])\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame0,2380,400,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
+            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=8203,maximumSize=,minimumSize=,preferredSize=])"
           },
           "output_type" : "execute_result",
           "execution_count" : 6,
-          "time" : "Took: 2.080s, at 2018-09-07 14:09"
+          "time" : "Took: 24.681s, at 2018-09-09 23:24"
         }
       ]
     }
