--- a/SparkNotebooks/UpToDate/Scala K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Scala K-Means C4E.snb.ipynb
@@ -16,7 +16,7 @@
       "clustering4ever % default % http://dl.bintray.com/clustering4ever/Clustering4Ever % maven"
     ],
     "customDeps" : [
-      "clustering4ever % clustering4ever_2.11 % 0.6.4",
+      "clustering4ever % clustering4ever_2.11 % 0.6.7",
       "com.github.haifengl:smile-scala_2.11:1.5.0"
     ],
     "customImports" : null,
@@ -75,7 +75,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 0.755s, at 2018-09-07 14:18"
+          "time" : "Took: 2.577s, at 2018-09-09 23:23"
         }
       ]
     },
@@ -102,7 +102,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-07 13:36:20--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.9’\n\n     0K .......                                               100%  365M=0s\n\n2018-09-07 13:36:20 (365 MB/s) - ‘/tmp/aggregation.csv.9’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 13:36:20--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 13:36:20--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.10’\n\n     0K .                                                     100%  124M=0s\n\n2018-09-07 13:36:20 (124 MB/s) - ‘/tmp/labels.10’ saved [1576/1576]\n\nFINISHED --2018-09-07 13:36:20--\nTotal wall clock time: 0.4s\nDownloaded: 2 files, 9.4K in 0s (277 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-09-09 23:24:01--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... failed: Name or service not known.\nwget: unable to resolve host address ‘www.clustering4ever.org’\n:sh: Scheme missing.\n--2018-09-09 23:24:31--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-09 23:24:31--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.20’\n\n     0K .                                                     100%  154M=0s\n\n2018-09-09 23:24:31 (154 MB/s) - ‘/tmp/labels.20’ saved [1576/1576]\n\nFINISHED --2018-09-09 23:24:31--\nTotal wall clock time: 30s\nDownloaded: 1 files, 1.5K in 0s (154 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
         }
       ]
     },
@@ -125,7 +125,7 @@
         "val datasetSize = 2000000\n",
         "val dim = 100\n",
         "val path = \"/tmp/aggregation.csv\"\n",
-        "val useAggregationDS = false\n",
+        "val useAggregationDS = true\n",
         "\n",
         "val rawData = if( useAggregationDS ) Source.fromFile(path).getLines.map( x => mutable.ArrayBuffer(x.split(\",\").map(_.toDouble):_*) ).toBuffer\n",
         "  else mutable.ArrayBuffer.fill(datasetSize)(mutable.ArrayBuffer.fill(dim)(scala.util.Random.nextDouble))\n",
@@ -138,7 +138,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "datasetSize: Int = 2000000\ndim: Int = 100\npath: String = /tmp/aggregation.csv\nuseAggregationDS: Boolean = false\nrawData: scala.collection.mutable.Buffer[scala.collection.mutable.ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(0.4127021608244922, 0.015072342651154869, 0.10799190350406374, 0.10970637312396847, 0.1569008905498509, 0.8597422669616767, 1.2960782260285075E-4, 0.9853396805660675, 0.2018103125715781, 0.14642448268847053, 0.8623201639574947, 0.5251123554154499, 0.5099008600171878, 0.8963921306535552, 0.42262032729746724, 0.5290781941825453, 0.3367476330990349, 0.3466161572952129, 0.8823357220995842, 0.06588807078536485, 0.10660155964586138, 0.7844106895827907, 0.18356579593947964, 0.9180716008198188, 0.025498839682826735, 0.9217484800890267, 0.49727395376698014, 0.725878583145658..."
+          "text" : "datasetSize: Int = 2000000\ndim: Int = 100\npath: String = /tmp/aggregation.csv\nuseAggregationDS: Boolean = true\nrawData: scala.collection.mutable.Buffer[scala.collection.mutable.ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(15.55, 28.65), ArrayBuffer(14.9, 27.55), ArrayBuffer(14.45, 28.35), ArrayBuffer(14.15, 28.8), ArrayBuffer(13.75, 28.05), ArrayBuffer(13.35, 28.45), ArrayBuffer(13.0, 29.15), ArrayBuffer(13.45, 27.5), ArrayBuffer(13.6, 26.5), ArrayBuffer(12.8, 27.35), ArrayBuffer(12.4, 27.85), ArrayBuffer(12.3, 28.4), ArrayBuffer(12.2, 28.65), ArrayBuffer(13.4, 25.1), ArrayBuffer(12.95, 25.95), ArrayBuffer(12.9, 26.5), ArrayBuffer(11.85, 27.0), ArrayBuffer(11.35, 28.0), ArrayBuffer(11.15, 28.7), ArrayBuffer(11.25, 27.4), ArrayBuffer(10.75, 27.7), ArrayBuffer(10.5, 28.35), ArrayBuffer(..."
         },
         {
           "metadata" : { },
@@ -147,7 +147,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 3,
-          "time" : "Took: 1m3.830s, at 2018-09-07 13:37"
+          "time" : "Took: 4.343s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -181,7 +181,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nmetric2: clustering4ever.math.distances.scalar.Minkowski[scala.collection.mutable.ArrayBuffer[Double]] = clustering4ever.math.distances.scalar.Minkowski@6e6796b1\n"
+          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nmetric2: clustering4ever.math.distances.scalar.Minkowski[scala.collection.mutable.ArrayBuffer[Double]] = clustering4ever.math.distances.scalar.Minkowski@416cdee4\n"
         },
         {
           "metadata" : { },
@@ -190,7 +190,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 4,
-          "time" : "Took: 0.935s, at 2018-09-07 13:37"
+          "time" : "Took: 2.124s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -234,16 +234,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 15011508962559\nmodel: clustering4ever.scala.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.scala.clustering.kmeans.KMeansModel@24ed7f00\nt2: Long = 15024893349045\nres6: Double = 13.384386486\n"
+          "text" : "t1: Long = 50737379175767\nmodel: clustering4ever.scala.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.scala.clustering.kmeans.KMeansModel@488f7fcf\nt2: Long = 50737674595978\nres6: Double = 0.295420211\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "13.384386486"
+            "text/html" : "0.295420211"
           },
           "output_type" : "execute_result",
           "execution_count" : 5,
-          "time" : "Took: 14.359s, at 2018-09-07 13:37"
+          "time" : "Took: 3.143s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -293,16 +293,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 15025863841986\nt2: Long = 15035361233137\nseqData: scala.collection.mutable.Seq[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ArraySeq(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@30b900c6,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@21a0c162,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@73721b8f,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@4adf031a,List(),2147483647), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@329895b7,List(),2147483647), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVect..."
+          "text" : "t1: Long = 50740894588218\nt2: Long = 50740936038049\nseqData: scala.collection.mutable.Seq[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ArraySeq(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@112154fe,None,None), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@557886da,None,None), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@6d7753eb,None,None), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@78355e89,None,None), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@632863d5,None,None), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@7277773c,None,None), RealClusterizabl..."
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "4.393892996457886"
+            "text/html" : "0.44028546220128134"
           },
           "output_type" : "execute_result",
           "execution_count" : 6,
-          "time" : "Took: 52.197s, at 2018-09-07 13:38"
+          "time" : "Took: 3.203s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -332,7 +332,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "clusterized11: scala.collection.mutable.Buffer[(model.ClusterID, scala.collection.mutable.ArrayBuffer[Double])] = ArrayBuffer((0,ArrayBuffer(0.4127021608244922, 0.015072342651154869, 0.10799190350406374, 0.10970637312396847, 0.1569008905498509, 0.8597422669616767, 1.2960782260285075E-4, 0.9853396805660675, 0.2018103125715781, 0.14642448268847053, 0.8623201639574947, 0.5251123554154499, 0.5099008600171878, 0.8963921306535552, 0.42262032729746724, 0.5290781941825453, 0.3367476330990349, 0.3466161572952129, 0.8823357220995842, 0.06588807078536485, 0.10660155964586138, 0.7844106895827907, 0.18356579593947964, 0.9180716008198188, 0.025498839682826735, 0.9217484800890267, 0.49727395376698014, 0.7258785831456588, 0.3561337376802901, 0.868480895194272, 0.7921421195513476, 0.4226061713613388, 0...."
+          "text" : "clusterized11: scala.collection.mutable.Buffer[(model.ClusterID, scala.collection.mutable.ArrayBuffer[Double])] = ArrayBuffer((6,ArrayBuffer(15.55, 28.65)), (3,ArrayBuffer(14.9, 27.55)), (3,ArrayBuffer(14.45, 28.35)), (3,ArrayBuffer(14.15, 28.8)), (3,ArrayBuffer(13.75, 28.05)), (3,ArrayBuffer(13.35, 28.45)), (3,ArrayBuffer(13.0, 29.15)), (3,ArrayBuffer(13.45, 27.5)), (3,ArrayBuffer(13.6, 26.5)), (3,ArrayBuffer(12.8, 27.35)), (3,ArrayBuffer(12.4, 27.85)), (3,ArrayBuffer(12.3, 28.4)), (3,ArrayBuffer(12.2, 28.65)), (3,ArrayBuffer(13.4, 25.1)), (3,ArrayBuffer(12.95, 25.95)), (3,ArrayBuffer(12.9, 26.5)), (3,ArrayBuffer(11.85, 27.0)), (3,ArrayBuffer(11.35, 28.0)), (3,ArrayBuffer(11.15, 28.7)), (3,ArrayBuffer(11.25, 27.4)), (3,ArrayBuffer(10.75, 27.7)), (3,ArrayBuffer(10.5, 28.35)), (3,ArrayBu..."
         },
         {
           "metadata" : { },
@@ -341,7 +341,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 7,
-          "time" : "Took: 1m11.928s, at 2018-09-07 13:39"
+          "time" : "Took: 2.055s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -362,14 +362,23 @@
       "cell_type" : "code",
       "source" : [
         "val rawData = clusterized22.map( rc => rc.vector.toArray ).toArray\n",
-        "val labels = clusterized22.map( rc => rc.clusterID ).toArray\n",
+        "val labels = clusterized22.map( rc => rc.clusterID.get ).toArray\n",
         "plot(rawData, labels, '*', Palette.COLORS)"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "java.lang.IllegalArgumentException: Invalid data dimension: 100\n  at smile.plot.ScatterPlot.plot(ScatterPlot.java:514)\n  at smile.plot.ScatterPlot.plot(ScatterPlot.java:484)\n  at smile.plot.Operators$class.plot(Operators.scala:85)\n  at smile.plot.package$.plot(package.scala:23)\n  ... 69 elided\n"
+          "text" : "rawData: Array[Array[Double]] = Array(Array(15.55, 28.65), Array(14.9, 27.55), Array(14.45, 28.35), Array(14.15, 28.8), Array(13.75, 28.05), Array(13.35, 28.45), Array(13.0, 29.15), Array(13.45, 27.5), Array(13.6, 26.5), Array(12.8, 27.35), Array(12.4, 27.85), Array(12.3, 28.4), Array(12.2, 28.65), Array(13.4, 25.1), Array(12.95, 25.95), Array(12.9, 26.5), Array(11.85, 27.0), Array(11.35, 28.0), Array(11.15, 28.7), Array(11.25, 27.4), Array(10.75, 27.7), Array(10.5, 28.35), Array(9.65, 28.45), Array(10.25, 27.25), Array(10.75, 26.55), Array(11.7, 26.35), Array(11.6, 25.9), Array(11.9, 25.05), Array(12.6, 24.05), Array(11.9, 24.5), Array(11.1, 25.2), Array(10.55, 25.15), Array(10.05, 25.95), Array(9.35, 26.6), Array(9.3, 27.25), Array(9.2, 27.8), Array(7.5, 28.25), Array(8.55, 27.45), Ar..."
+        },
+        {
+          "metadata" : { },
+          "data" : {
+            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
+          },
+          "output_type" : "execute_result",
+          "execution_count" : 8,
+          "time" : "Took: 4.034s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -389,11 +398,11 @@
       },
       "cell_type" : "code",
       "source" : [
-        "val trueLabels = Source.fromFile(groundTruePath).getLines.map(_.toInt).toBuffer\n",
+        "val trueLabels = Source.fromFile(groundTruePath).getLines.map(_.toInt).toBuffer.toParArray\n",
         "\n",
         "val (_, trueLabelsFrom0) = ExternalIndexes.prepareLabels(trueLabels)\n",
         "\n",
-        "val predicts = clusterized22.map(_.clusterID).seq\n",
+        "val predicts = clusterized22.map(_.clusterID.get).toParArray\n",
         "\n",
         "val nmi = ExternalIndexes.nmi(trueLabelsFrom0, predicts, SQRT)\n",
         "\n",
@@ -403,7 +412,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "java.lang.IllegalArgumentException: requirement failed\n  at scala.Predef$.require(Predef.scala:212)\n  at clustering4ever.scala.indexes.ExternalIndexes.mutualInformationInternal(ExternalIndexes.scala:16)\n  at clustering4ever.scala.indexes.ExternalIndexes$.nmi(ExternalIndexes.scala:64)\n  ... 69 elided\n"
+          "text" : "trueLabels: scala.collection.parallel.mutable.ParArray[Int] = ParArray(2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, ..."
+        },
+        {
+          "metadata" : { },
+          "data" : {
+            "text/html" : "0.8538856763962724"
+          },
+          "output_type" : "execute_result",
+          "execution_count" : 9,
+          "time" : "Took: 3.349s, at 2018-09-09 23:24"
         }
       ]
     }
