--- a/SparkNotebooks/UpToDate/Spark K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Spark K-Means C4E.snb.ipynb
@@ -18,7 +18,7 @@
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.4"
+      "clustering4ever % clustering4ever_2.11 % 0.6.7"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -77,7 +77,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 3.438s, at 2018-09-07 13:29"
+          "time" : "Took: 3.547s, at 2018-09-09 23:23"
         }
       ]
     },
@@ -104,7 +104,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-07 13:29:32--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.6’\n\n     0K .......                                               100%  973M=0s\n\n2018-09-07 13:29:32 (973 MB/s) - ‘/tmp/aggregation.csv.6’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-07 13:29:32--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-07 13:29:32--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.6’\n\n     0K .                                                     100%  187M=0s\n\n2018-09-07 13:29:32 (187 MB/s) - ‘/tmp/labels.6’ saved [1576/1576]\n\nFINISHED --2018-09-07 13:29:32--\nTotal wall clock time: 0.07s\nDownloaded: 2 files, 9.4K in 0s (577 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-09-09 23:23:30--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.15’\n\n     0K .......                                               100%  919K=0.009s\n\n2018-09-09 23:23:30 (919 KB/s) - ‘/tmp/aggregation.csv.15’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-09 23:23:30--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-09 23:23:30--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.17’\n\n     0K .                                                     100%  188M=0s\n\n2018-09-09 23:23:30 (188 MB/s) - ‘/tmp/labels.17’ saved [1576/1576]\n\nFINISHED --2018-09-09 23:23:30--\nTotal wall clock time: 0.1s\nDownloaded: 2 files, 9.4K in 0.009s (1.07 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
         }
       ]
     },
@@ -129,7 +129,6 @@
         "val useAggregationDS = true\n",
         "val dp = 16\n",
         "\n",
-        "//val path = \"/home/KyBe/tmpDS/hyperplan.csv\"\n",
         "val path = \"/tmp/aggregation.csv\"\n",
         "val rawRdd = if( useAggregationDS ) sc.textFile(path, dp).map( x => mutable.ArrayBuffer(x.split(\",\").map(_.toDouble):_*)) else sc.parallelize(List.fill(datasetSize)(mutable.ArrayBuffer.fill(dim)(scala.util.Random.nextDouble)), dp)\n",
         "val rdd = rawRdd.zipWithIndex.map{ case (v, id) => new RealClusterizable(id, new RealVector(v)) }.cache\n",
@@ -141,7 +140,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "datasetSize: Int = 500000\ndim: Int = 4\nuseAggregationDS: Boolean = true\ndp: Int = 16\npath: String = /tmp/aggregation.csv\nrawRdd: org.apache.spark.rdd.RDD[scala.collection.mutable.ArrayBuffer[Double]] = MapPartitionsRDD[2] at map at <console>:90\nrdd: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[4] at map at <console>:91\nlabelsPath: String = /tmp/labels\nres4: Long = 788\n"
+          "text" : "datasetSize: Int = 500000\ndim: Int = 4\nuseAggregationDS: Boolean = true\ndp: Int = 16\npath: String = /tmp/aggregation.csv\nrawRdd: org.apache.spark.rdd.RDD[scala.collection.mutable.ArrayBuffer[Double]] = MapPartitionsRDD[2] at map at <console>:89\nrdd: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[4] at map at <console>:90\nlabelsPath: String = /tmp/labels\nres4: Long = 788\n"
         },
         {
           "metadata" : { },
@@ -150,7 +149,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 3,
-          "time" : "Took: 13.856s, at 2018-09-07 13:29"
+          "time" : "Took: 14.570s, at 2018-09-09 23:23"
         }
       ]
     },
@@ -187,7 +186,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 4,
-          "time" : "Took: 2.960s, at 2018-09-07 13:29"
+          "time" : "Took: 2.527s, at 2018-09-09 23:23"
         }
       ]
     },
@@ -228,16 +227,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1536319794383\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@4d432010\nclusterized: org.apache.spark.rdd.RDD[(model.ClusterID, clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]])] = MapPartitionsRDD[26] at map at <console>:110\nlclusterized: Array[(model.ClusterID, clustering4ever..."
+          "text" : "t1: Long = 1536528232836\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@4ba72f9e\nt2: Long = 1536528234206\nres7: Double = 1.37\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "2.002"
+            "text/html" : "1.37"
           },
           "output_type" : "execute_result",
           "execution_count" : 5,
-          "time" : "Took: 8.044s, at 2018-09-07 13:30"
+          "time" : "Took: 3.354s, at 2018-09-09 23:23"
         }
       ]
     },
@@ -257,7 +256,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "clusterized: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[31] at map at KCommonsSpark.scala:179\nlclusterized: Array[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@18fcc6fa,List(),2147483647), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@7afc01d3,List(),2147483647), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@42296a4d,List(),2147483647), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@32bcdb0f,List()..."
+          "text" : "clusterized: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[24] at map at K-CommonsSpark.scala:153\nlclusterized: Array[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@21f0c75a,None,Some(0)), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@63d358e1,None,Some(0)), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@1f449400,None,Some(0)), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@3e7fc15c,None,Some(0)), RealC..."
         },
         {
           "metadata" : { },
@@ -265,8 +264,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 16,
-          "time" : "Took: 0.640s, at 2018-09-07 13:32"
+          "execution_count" : 6,
+          "time" : "Took: 2.317s, at 2018-09-09 23:23"
         }
       ]
     },
@@ -287,7 +286,7 @@
       "cell_type" : "code",
       "source" : [
         "val rawData = lclusterized.map(_.vector.toArray).toArray\n",
-        "val labels = lclusterized.map( cz => cz.clusterID ).toArray\n",
+        "val labels = lclusterized.map( cz => cz.clusterID.get ).toArray\n",
         "\n",
         "plot(rawData, labels, '*', Palette.COLORS)"
       ],
@@ -300,11 +299,11 @@
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame0,2380,400,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
+            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
           },
           "output_type" : "execute_result",
-          "execution_count" : 19,
-          "time" : "Took: 1.074s, at 2018-09-07 13:33"
+          "execution_count" : 7,
+          "time" : "Took: 3.348s, at 2018-09-09 23:24"
         }
       ]
     },
@@ -328,7 +327,7 @@
         "\n",
         "val (_, trueLabelsFrom0) = ExternalIndexes.prepareLabels(trueLabels)\n",
         "\n",
-        "val predicts = clusterized.map(_.clusterID)\n",
+        "val predicts = clusterized.map(_.clusterID.get)\n",
         "\n",
         "val trueAndPredictRDD = sc.parallelize(trueLabelsFrom0.collect.zip(predicts.collect).map{ case(gt, pred) => (gt.toInt, pred) })\n",
         "\n",
@@ -340,16 +339,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "trueLabels: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[41] at parallelize at <console>:100\ntrueLabelsFrom0: org.apache.spark.rdd.RDD[Long] = MapPartitionsRDD[46] at map at ExternalIndexes.scala:81\npredicts: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[47] at map at <console>:104\ntrueAndPredictRDD: org.apache.spark.rdd.RDD[(Int, Int)] = ParallelCollectionRDD[48] at parallelize at <console>:106\nnmi: Double = 0.8497379557818189\nres41: Double = 0.8497379557818189\n"
+          "text" : "trueLabels: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[25] at parallelize at <console>:100\ntrueLabelsFrom0: org.apache.spark.rdd.RDD[Long] = MapPartitionsRDD[30] at map at ExternalIndexes.scala:76\npredicts: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[31] at map at <console>:104\ntrueAndPredictRDD: org.apache.spark.rdd.RDD[(Int, Int)] = ParallelCollectionRDD[32] at parallelize at <console>:106\nnmi: Double = 0.8294086258162061\nres12: Double = 0.8294086258162061\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.8497379557818189"
+            "text/html" : "0.8294086258162061"
           },
           "output_type" : "execute_result",
-          "execution_count" : 25,
-          "time" : "Took: 1.092s, at 2018-09-07 13:35"
+          "execution_count" : 8,
+          "time" : "Took: 3.356s, at 2018-09-09 23:24"
         }
       ]
     }
